--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -4,5 +4,7 @@ $bg-orange: #f96745 !default;
 $border-orange: #f96745 !default;
 
 body {
-  font-family: Inter;
+  font-family: "Lexend", sans-serif;
+  font-size: 16px;
+  font-weight: 500;
 }
