--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -2,4 +2,9 @@
 @import "variables";
 @import "@coreui/coreui/dist/css/coreui.min.css";
 
+//font
+@import "fonts/font.scss";
+//custom_page
 @import "custom_header";
+@import "custom_page";
+@import "root";
