--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,5 +6,6 @@
 @import "fonts/font.scss";
 //custom_page
 @import "custom_header";
+@import "custom_footer";
 @import "custom_page";
 @import "root";
