--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,8 @@
 // If you want to override variables do it here
 @import "variables";
 @import "@coreui/coreui/dist/css/coreui.min.css";
-
+@import "slick-carousel/slick/slick.css";
+@import "slick-carousel/slick/slick-theme.css";
 //font
 @import "fonts/font.scss";
 //custom_page
