--- a/src/scss/_custom_footer.scss
+++ b/src/scss/_custom_footer.scss
@@ -13,9 +13,11 @@
   z-index: -10;
 }
 .footer {
+  border-top: none;
+  margin-top: 120px;
   background: none;
   position: relative;
-  padding: 150px 0px 100px 0px;
+  padding: 50px 0px 100px 0px;
   .footer-container {
     padding: 20px;
     display: grid;
