--- a/src/scss/_custom_home_page.scss
+++ b/src/scss/_custom_home_page.scss
@@ -216,6 +216,27 @@
         }
       }
     }
+    .the-see-house-section-right {
+      max-width: 50%;
+      position: relative;
+      video {
+        width: 100%;
+        border-radius: 4px;
+      }
+
+      .list-img-bottom {
+        display: flex;
+        gap: 8px;
+        position: absolute;
+        bottom: -35px;
+        left: -35px;
+        > div {
+          display: flex;
+          align-items: end;
+          gap: 8px;
+        }
+      }
+    }
   }
 }
 .the-see-house-page::before {
@@ -231,4 +252,50 @@
   background-size: contain; /* Đặt kích thước của background 1 là auto để giữ nguyên tỷ lệ và background 2 là auto */
   background-position: bottom right;
   z-index: -10;
+}
+.the-section-review {
+  margin-top: 140px;
+  .slick-slide {
+    width: 700px;
+    height: 505px;
+  }
+  .slider-container-list {
+    .slider-container {
+      max-width: 700px;
+      max-height: 505px;
+      border-radius: 4px;
+      position: relative;
+      img {
+        width: 100%;
+        height: 100%;
+        border-radius: 4px;
+      }
+      .content {
+        position: absolute;
+        width: 612px;
+        padding: 32px;
+        background-color: #fff;
+        border-radius: 16px;
+        box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+        top: 95%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        h3 {
+          color: #1b1c57;
+          font-size: 20px;
+          font-weight: bold;
+        }
+        span {
+          margin-top: 16px;
+          color: #626687;
+          font-size: 14px;
+          line-height: 24px;
+          font-weight: 500;
+        }
+      }
+      .slick-track {
+        height: 505px !important;
+      }
+    }
+  }
 }
