--- a/src/scss/_custom_home_page.scss
+++ b/src/scss/_custom_home_page.scss
@@ -255,11 +255,22 @@
 }
 .the-section-review {
   margin-top: 140px;
+  .breadcrum-bar {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .title-banner {
+    margin-top: 12px;
+    display: flex;
+    justify-content: center;
+  }
   .slick-slide {
     width: 700px;
     height: 505px;
+    padding-right: 56px !important;
   }
   .slider-container-list {
+    margin-top: 40px;
     .slider-container {
       max-width: 700px;
       max-height: 505px;
@@ -286,11 +297,41 @@
           font-weight: bold;
         }
         span {
-          margin-top: 16px;
           color: #626687;
           font-size: 14px;
           line-height: 24px;
           font-weight: 500;
+        }
+      }
+      .content-bottom {
+        margin-top: 24px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        .content-bottom-user {
+          display: flex;
+          gap: 24px;
+          h3 {
+            color: #0e1735;
+            font-size: 14px;
+            line-height: 22px;
+            font-weight: 600;
+          }
+          h4 {
+            color: #888b97;
+            font-size: 14px;
+            line-height: 22px;
+          }
+        }
+        .content-bottom-start {
+          display: flex;
+          gap: 16px;
+          span {
+            font-size: 20px;
+            font-weight: 600;
+            color: #3c4563;
+            line-height: 28px;
+          }
         }
       }
       .slick-track {
@@ -298,4 +339,153 @@
       }
     }
   }
+}
+
+.seetips-section {
+  position: relative;
+  margin-top: 120px;
+  .breadcrum-bar {
+    flex-direction: column;
+    justify-content: center;
+  }
+  .title-banner {
+    margin: 12px auto 0px;
+    max-width: 424px;
+    text-align: center;
+  }
+  .d-flex {
+    margin-top: 24px;
+    justify-content: center;
+  }
+  .seetips-section-content {
+    margin-top: 42px;
+    display: flex;
+    justify-content: space-between;
+    // gap: 68px;
+    .seetips-section-content-left {
+      display: flex;
+      flex-direction: column;
+      gap: 42px;
+      width: 50%;
+      .seetips-section-content-left-item {
+        display: flex;
+        gap: 32px;
+        cursor: pointer;
+        .seetips-section-content-left-user {
+          display: flex;
+          flex-direction: column;
+          gap: 12px;
+        }
+        .seetips-section-content-left-item-img {
+          border-radius: 16px;
+        }
+
+        .seetips-section-content-left-item-info {
+          display: flex;
+          gap: 16px;
+          align-items: center;
+          span {
+            color: #3c4563;
+            font-size: 14px;
+            line-height: 22px;
+          }
+        }
+        span {
+          color: #1b1c57;
+          font-size: 18px;
+          line-height: 32px;
+          font-weight: 600;
+        }
+        .seetips-section-content-left-item-bottom {
+          display: flex;
+          gap: 12px;
+          align-items: center;
+        }
+      }
+    }
+    .seetips-section-content-right {
+      width: 45%;
+      cursor: pointer;
+      .seetips-section-content-right-img {
+        max-width: 560px;
+        max-height: 280px;
+        border-radius: 16px;
+        img {
+          width: 100%;
+          height: 100%;
+          border-radius: 16px;
+        }
+      }
+      .seetips-section-content-right-content {
+        margin-top: 16px;
+        display: flex;
+        gap: 12px;
+        flex-direction: column;
+        .seetips-section-content-right-content-user {
+          display: flex;
+          gap: 16px;
+          align-items: center;
+          span {
+            color: #3c4563;
+            font-size: 14px;
+            line-height: 22px;
+            font-weight: 600;
+          }
+        }
+        h4 {
+          color: #1b1c57;
+          font-size: 24px;
+          line-height: 32px;
+          font-weight: 600;
+        }
+        span {
+          font-size: 14px;
+          color: #626687;
+          line-height: 24px;
+          font-weight: 600;
+        }
+        .seetips-section-content-right-item-bottom {
+          display: flex;
+          gap: 16px;
+        }
+      }
+    }
+  }
+}
+.seetips-section::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 600px; /* Đặt chiều rộng của background 1 lớn hơn */
+  height: 700px; /* Chiều cao của background sẽ là 100% để nó bao phủ toàn bộ footer */
+  background-image: url("../assets/images/backgrounds/Vector.png");
+  background-repeat: no-repeat;
+  background-size: cover; /* Đặt kích thước của background 1 là auto để giữ nguyên tỷ lệ và background 2 là auto */
+  background-position: center;
+  z-index: -10;
+}
+.the-subscribe-section {
+  width: 100%;
+  margin-top: 120px;
+  height: 312px;
+  background-image: linear-gradient(
+    to right top,
+    #9189e7,
+    #969aea,
+    #9ea9ea,
+    #aab8ea,
+    #b9c6e8,
+    #becae8,
+    #c3cfe7,
+    #c8d3e7,
+    #c1cfe9,
+    #bacbeb,
+    #b2c7ec,
+    #abc3ee
+  );
+  border-radius: 32px;
+  display: flex;
+  justify-content: space-between;
+  justify-content: center;
 }
