--- a/src/scss/_custom_header.scss
+++ b/src/scss/_custom_header.scss
@@ -20,7 +20,7 @@
     z-index: -10;
     @media screen and (max-width: 1200px) {
       border-radius: 0px 0 40px 40px;
-      opacity: 0.7;
+      opacity: 0.3;
       width: 100%;
     }
   }
@@ -100,6 +100,9 @@
           background-color: rgba(255, 255, 255, 0.3);
           border: 1px solid #ffffff;
           color: #f0f3fd;
+          @media screen and (max-width: 1200px) {
+            background-color: rgba(0, 0, 0, 0.3);
+          }
         }
       }
       .signup-btn {
