--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,6 +3,7 @@
 @import "@coreui/coreui/dist/css/coreui.min.css";
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
+@import "antd/dist/antd.css";
 //font
 @import "fonts/font.scss";
 //custom_page
@@ -15,3 +16,6 @@
 @import "custom_slider";
 @import "custom_skeleton";
 @import "custom_layout";
+
+@import "./admin/custom_responsive";
+@import "./admin/custom_admin";
