--- a/src/scss/_custom_header.scss
+++ b/src/scss/_custom_header.scss
@@ -125,6 +125,7 @@
             margin-right: 16px;
           }
           .ant-btn {
+            border: none;
             position: absolute;
             display: flex;
             align-items: center;
