fix select conflit

--- a/src/scss/admin/_custom_admin.scss
+++ b/src/scss/admin/_custom_admin.scss
@@ -364,7 +364,7 @@
     background: transparent;
     position: relative;
     min-height: 100vh;
-    width: 100%;
+    // width: 100%;
     flex-shrink: 0;
   }
 
@@ -398,85 +398,6 @@
     flex-direction: row-reverse;
     align-items: center;
     margin-top: 10px;
-  }
-
-  .ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown {
-    background: #fff;
-    box-shadow: 0 20px 27px rgb(0 0 0 / 5%);
-    border-radius: 12px;
-    min-width: 276px;
-    padding: 16px 8px;
-  }
-
-  .ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
-    ul.ant-dropdown-menu-items {
-    margin: 0px;
-    padding: 0px;
-  }
-
-  .ant-dropdown.ant-dropdown-placement-bottomRight {
-    min-width: inherit !important;
-  }
-
-  .ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
-    .ant-list-item {
-    padding: 5px 16px;
-    margin-bottom: 8px;
-  }
-  .ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
-    .ant-avatar {
-    width: 36px;
-    height: 36px;
-    background-color: #fafafa;
-    box-shadow: 0 4px 6px rgb(0 0 0 / 12%);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
-    .ant-list-item-meta-title {
-    line-height: normal;
-  }
-  .ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdownt
-    .ant-list-item-meta-description {
-    color: #8c8c8c;
-    font-size: 12px;
-    line-height: 12px;
-    font-weight: 600;
-  }
-  .ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
-    .ant-list-item-meta-description
-    svg {
-    width: 14px;
-    height: 14px;
-    fill: #8c8c8c;
-    vertical-align: middle;
-    margin-right: 4px;
-  }
-  .ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
-    .ant-list-item-meta-description
-    svg
-    path {
-    fill: #8c8c8c;
-  }
-  .ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
-    .ant-list-item-meta-description
-    span {
-    vertical-align: middle;
-  }
-
-  .ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
-    .ant-avatar
-    .ant-avatar-string {
-    top: 6px;
-  }
-
-  .ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
-    .ant-avatar
-    .ant-avatar-string
-    svg {
-    width: 22px;
-    height: 22px;
   }
 
   .h3,
@@ -3056,4 +2977,82 @@
     path {
     fill: #8c8c8c;
   }
+}
+.ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown {
+  background: #fff;
+  box-shadow: 0 20px 27px rgb(0 0 0 / 5%);
+  border-radius: 12px;
+  min-width: 276px !important;
+  padding: 16px 8px;
+}
+
+.ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
+  ul.ant-dropdown-menu-items {
+  margin: 0px;
+  padding: 0px;
+}
+
+.ant-dropdown.ant-dropdown-placement-bottomRight {
+  min-width: inherit !important;
+}
+
+.ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
+  .ant-list-item {
+  padding: 5px 16px;
+  margin-bottom: 8px;
+}
+.ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
+  .ant-avatar {
+  width: 36px;
+  height: 36px;
+  background-color: #fafafa;
+  box-shadow: 0 4px 6px rgb(0 0 0 / 12%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
+  .ant-list-item-meta-title {
+  line-height: normal;
+}
+.ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdownt
+  .ant-list-item-meta-description {
+  color: #8c8c8c;
+  font-size: 12px;
+  line-height: 12px;
+  font-weight: 600;
+}
+.ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
+  .ant-list-item-meta-description
+  svg {
+  width: 14px;
+  height: 14px;
+  fill: #8c8c8c;
+  vertical-align: middle;
+  margin-right: 4px;
+}
+.ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
+  .ant-list-item-meta-description
+  svg
+  path {
+  fill: #8c8c8c;
+}
+.ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
+  .ant-list-item-meta-description
+  span {
+  vertical-align: middle;
+}
+
+.ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
+  .ant-avatar
+  .ant-avatar-string {
+  top: 6px;
+}
+
+.ant-dropdown-menu.ant-dropdown-menu-split.header-notifications-dropdown
+  .ant-avatar
+  .ant-avatar-string
+  svg {
+  width: 22px;
+  height: 22px;
 }
